# SmartMealPlanner

./: .coverage  .env.example  FEATURE_1_SUMMARY.md  FEATURE_2_SUMMARY.md  FEATURE_3_SUMMARY.md  FEATURE_4_SUMMARY.md  FEATURE_5_SUMMARY.md  README.md  alembic.ini  mealplanner.db  nutrition_goals.json  pyproject.toml  requirements.txt  sample_ingredients.json  sample_recipes.csv  sample_recipes.json  simple_recipes.json  test_recipe.json
alembic/: env.py
alembic/versions/: 236b9db11a9f_initial_schema.py  f96123a60137_initial_schema_with_recipe_ingredient_.py
plugins/: test_plugin.py
src/mealplanner/: __init__.py  calendar_management.py  cli.py  config.py  database.py  email_notifications.py  email_templates.py  health.py  ingredient_management.py  ingredient_search.py  meal_planning.py  models.py  nutritional_analysis.py  nutritional_goals.py  plugin_loader.py  recipe_import.py  recipe_management.py  shopping_list.py  shopping_list_export.py
tests/: test_calendar_management.py  test_cli.py  test_config.py  test_database.py  test_email_cli.py  test_email_notifications.py  test_email_templates.py  test_health.py  test_ingredient_management.py  test_ingredient_search.py  test_meal_planning.py  test_models.py  test_nutritional_analysis.py  test_nutritional_goals.py  test_plugin_loader.py  test_recipe_import.py  test_recipe_management.py  test_shopping_list.py  test_shopping_list_export.py
